Adding colour gradient.

--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
 
             <div class="row marketing">
                 <div class="col-lg-6">
-                   <canvas id="canvas" width="800" height="800">
+                   <canvas id="fractalcanvas" width="800" height="800">
 					Your browser does not support HTML5 Canvas.
 					</canvas>
                 </div>
